@@ -1,5 +1,6 @@
 Alpha 0.1.8.27
 - New command: "/listplayerdoors <player>". This command will list all doors owned by the given player. Permission: "bigdoors.admin.listplayerdoors".
+- Fixed build permission checking issues for PlotSquared roads. Affects all supported versions of PlotSquared (3-5). Thanks, @xTronix, for the bug report!
 
 Alpha 0.1.8.26
 - Added method to get all available doors. Thanks, @Chojo, for the implementation.
